[tool.poetry]
name = "demo-kortrijk"
version = "0.1.0"
description = ""
authors = ["Dimitri Graur <dimitri.graur@kapernikov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
anomalib = {extras = ["full"], version = "^0.7.0"}
mvtec-halcon = "22111.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
